--- a/assistant/templates/index.html
+++ b/assistant/templates/index.html
@@ -64,6 +64,7 @@
         .faq-section {
             margin-top: 30px;
             text-align: left;
+            width: 80%;
         }
 
         .faq {
